[package]
name = "rwgpurt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "*", features = ["rwh_06"] }
raw-window-handle = "*"
wgpu = { version = "*" }
env_logger = "*"
pollster = "*"
rand = "*"
glam = { version = "*", features = ["bytemuck", "rand", "serde"] }
hashbrown = { version = "*" }
toml = "*"
self_cell = "1"
bytemuck = { version = "1", features = ["derive", "zeroable_maybe_uninit"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
